--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     <hr class="tagline-divider">
                     <h2>
                         <small>
-                            <strong>A website documenting the change in the lower Michigan accent over the last 100 years.</strong>
+                            <strong>Documenting the change in the lower Michigan accent over the last 100 years.</strong>
                         </small>
                     </h2>
                     
@@ -124,9 +124,8 @@
                     <h2 class="intro-text text-center">ABOUT
                     </h2>
                     <hr>
-                    <img class="img-responsive img-border img-left" src="img/intro-pic.jpg" alt="">
                     <hr class="visible-xs">
-                    <p>Hello!  This is a page about how language in Lansing, MI and other locales in North America are changing.  On this page, you'll find a brief description of the dialect spoken in Michigan along with a description of its history.  The next page will bring you up to speed with the findings of ongoing research my colleagues and I have been conducting with Lansing speakers.  Links to supplemental material can be found throughout this website.  Enjoy!</p>
+                    <p>Hello!  This is a page about how language in Lansing, MI is changing over time.  On this page, you'll find a brief description of the dialect spoken in Michigan.  The <i>Lansing</i> page will bring you up to speed with the findings of ongoing research my colleagues and I have been conducting with Lansing speakers.  Links to supplemental materials, including how to contact research members can be found on the <i>Contacts</i>page.  Enjoy!</p>
                 </div>
             </div>
         </div>
@@ -139,11 +138,11 @@
                     </h2>
                     <hr>
       
-                    <p>The Northern Cities Shift, henceforth NCS, is a dialect of English spoken in what is known as the Inland North dialect area.  A collection of large cities in the Great Lakes are of North America.  Some of the larger cities in this region include Green Bay, Wisconsin, Chicago, Illinois, Detroit, Michigan, Cleveland, Ohio, Scranton, Pennsylvania and Syracuse, New York.  Linguists call the NCS a regional dialect because although the speakers of the dialect are of various social backgrounds (ethnicities, social classes, ages, etc.), they are all similar in that they were born and raised in the same general geographical space, often referred to as the Rust Belt.  </p>
+                    <p>The Northern Cities Shift or NCS is a dialect of English spoken in what is known as the Inland North dialect area.  A collection of cities surrounding the Great Lakes area of North America.  Some of the larger cities in this region include Green Bay, Wisconsin, Chicago, Illinois, Detroit, Michigan, Cleveland, Ohio, Scranton, Pennsylvania and Syracuse, New York.  Linguists call the NCS a regional dialect because although the speakers of the dialect are of various social backgrounds (ethnicities, social classes, ages, etc.), they are all similar in that they were born and raised in the same general geographical space, often referred to as the Rust Belt.  </p>
   
-<p>**************[insert map]*********************
-
-Speakers in this region pronounce vowel sounds a bit differently from the rest of the United States.
+<p>  <img class="img-responsive img-border img-left" src="img/map_AmerDialects.jpg" alt="">  </p>
+<br>
+<p>Speakers in this region pronounce vowel sounds a bit differently from the rest of the United States.
 
 BAT sounds more like BEYAT
 BOT sounds more like BAT
