--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ BUT sounds more like BOUGHT
     <br />
 BIT sounds more like BET   </p>
 
-<p>Another characteristic of this region is that the vowels in BOT and BOUGHT are different.  In most other parts of the US, these vowels are the same sound.
+<p>Speakers born and raised in this region pronounce the vowels in BOT and BOUGHT differently.  In most other parts of the US, these vowels are the same sound.
 </p>
 
 <p>Below is a visual representtion of this pattern.  The figure is what linguists call a vowel space.  It is a graphical representation of the changes in pronunciation just described. The guide words are positioned to represent where in the mouth the tongue is placed when producing that vowel sound. So, for example, the tongue is placed higher and farther forward in the mouth when producing the vowel in BIT, whereas the tongue is placed lower and farther back in the mouth when producing the vowel in BOUGHT. The arrows indicate the direction of change affecting these sounds in the Inland North dialect area.
