--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
   
 <p>  <img class="img-responsive img-border img-left" src="img/map_InlandNorth.jpg" alt="">  </p>
  
-<p>Speakers in this region pronounce vowel sounds a bit differently from the rest of the United States.
+<p>Speakers born and raised in this region pronounce vowel sounds differently from speakers in other parts of the United States.  Their vowel sounds are in fact <i>shifting</i>, like the name of the dialect suggests!  
    <br />
 BAT sounds more like BEYAT
     <br />
@@ -154,13 +154,8 @@ BUT sounds more like BOUGHT
     <br />
 BIT sounds more like BET   </p>
 
-<p>Speakers born and raised in this region pronounce the vowels in BOT and BOUGHT differently.  In most other parts of the US, these vowels are the same sound.
-</p>
-
-<p>Below is a visual representtion of this pattern.  The figure is what linguists call a vowel space.  It is a graphical representation of the changes in pronunciation just described. The guide words are positioned to represent where in the mouth the tongue is placed when producing that vowel sound. So, for example, the tongue is placed higher and farther forward in the mouth when producing the vowel in BIT, whereas the tongue is placed lower and farther back in the mouth when producing the vowel in BOUGHT. The arrows indicate the direction of change affecting these sounds in the Inland North dialect area.
- **************[insert vowel space]*********************   
-</p>  
-                    
+<p>These speakers also pronounce the vowels in BOT and BOUGHT differently.  In most other parts of the US, these vowels are the same sound.
+</p>              
                 </div>
             </div>
         </div>
