--- a/index.html
+++ b/index.html
@@ -142,8 +142,9 @@
   
 <p>  <img class="img-responsive img-border img-left" src="img/map_InlandNorth.jpg" alt="">  </p>
  
-<p>Speakers born and raised in this region pronounce vowel sounds differently from speakers in other parts of the United States.  Their vowel sounds are in fact <i>shifting</i>, like the name of the dialect suggests!  
+<p>Speakers born and raised in this region pronounce vowel sounds differently from speakers in other parts of the United States.  Their vowel sounds are in fact <i>shifting</i>, like the name of the dialect suggests!  </p>
    <br />
+<p>    
 BAT sounds more like BEYAT
     <br />
 BOT sounds more like BAT
