--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ BIT sounds more like BET   </p>
                     </h2>
                     <hr>
                     <p>As of 2006, 34 million people spoke this dialect and for at least the last few decades, sociolinguistic research has found that speakers in these places were continuing to pass it on through generations.
-Surprisingly, recent studies in Chicago and Syracuse have found evidence of a new dialect in the area. Speakers in these communities are declining in the use of the features mentioned above.  My colleagues and I are also finding that the NCS dialect is declining in Lansing. Navigate to the "Lansing" page to take a closer look at what we’ve found and then the "Contacts" page to find out about our plans for further research!</p>
+Surprisingly, recent studies in <a href="pdf/McCarthy_2011_NCS in Chicago.pdf">Chicago,IL</a> and <a href="pdf/Driscoll_Lape_2015_reversal of NCS in syracuse.pdf">Syracuse,NY</a> have found evidence of a new dialect in the area. Speakers in these communities are declining in the use of the features mentioned above.  My colleagues and I are also finding that the NCS dialect is declining in Lansing. Navigate to the "Lansing" page to take a closer look at what we’ve found and then the "Contacts" page to find out about our plans for further research!</p>
                 </div>
             </div>
         </div>
