--- a/lansing.html
+++ b/lansing.html
@@ -75,7 +75,7 @@ table, th, td {
 
     <div class="container">
 
-        <div class="row">
+      <!--  <div class="row">
             <div class="box">
                 <div class="col-lg-12 text-center">
                     <img class="img-responsive img-border" src="img/map_lansing_mi.jpg" alt="">
@@ -85,26 +85,22 @@ table, th, td {
                     </h2>
                     <h1 class="brand-name">Lansing, Michigan</h1>
                       <hr class="tagline-divider">
-                <!--    <h2>
-                        <small>By
-                            <strong>Start Bootstrap</strong>
-                        </small>
-                    </h2>-->
+              
                 </div>
             </div>
-        </div>
+        </div>  -->
 
         <div class="row">
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
                     <h2 class="intro-text text-center">Research at
-                        <strong>Michigan State</strong>
+                        <strong>Michigan State University</strong>
                     </h2>
                     <hr>
-                    <img class="img-responsive img-border img-left" src="img/intro-pic.jpg" alt="">
+                    <img class="img-responsive img-border img-left" src="img/map_lansing_mi.jpg" alt="">
                     <hr class="visible-xs">
-                    <p>Sociolinguists from the Linguistics and Langauges department at Michigan State have been documenting the dialect spoken by people Lansingites over the past few years.</p>
+                    <p>Sociolinguists from the <a href= http://linglang.msu.edu/degree-programs/linguistics>Linguistics and Langauges department at Michigan State</a> have been documenting the dialect spoken by people Lansingites over the past few years.</p>
                     <p>Our data comes from two sources. Interviews conducted by historians with auto workers from Autotown in the late 1990's and interviews our researchers conducted with college students in 2014 and 2015.  </p>
                     <p>Acoustic analysis of these recorded interviews show that the NCS dialect is declining in Lansing.</p>
                    <div id="map" style="width:400px;height:400px;"></div>
