--- a/contacts.html
+++ b/contacts.html
@@ -119,9 +119,9 @@
                 </div>
                
                 <div class="col-sm-4 text-center">
-                    <h3>Matthew Savage
+                    <h3> <a href="http://dmattsavage.weebly.com/">Matthew Savage</a>
                         <br />
-                        <div><small>Attitudes toward local dialects. Contact MAtt at savaged5[at]msu[dot]edu </small></div>
+                        <div><small>Attitudes toward local dialects. </small></div>
                     </h3>
                 </div>
                 <div class="col-sm-6 text-center">
