--- a/lansing.html
+++ b/lansing.html
@@ -100,21 +100,12 @@ table, th, td {
                     <hr>
                     <img class="img-responsive img-border img-left" src="img/map_lansing_mi.jpg" alt="">
                     <hr class="visible-xs">
-                    <p>Sociolinguists from the <a href= http://linglang.msu.edu/degree-programs/linguistics>Linguistics and Langauges department at Michigan State</a> have been documenting the dialect spoken by people Lansingites over the past few years.</p>
-                    <p>Our data comes from two sources. Interviews conducted by historians with auto workers from Autotown in the late 1990's and interviews our researchers conducted with college students in 2014 and 2015.  </p>
-                    <p>Acoustic analysis of these recorded interviews show that the NCS dialect is declining in Lansing.</p>
+                    <p>Sociolinguists from the <a href= http://linglang.msu.edu/degree-programs/linguistics>Linguistics and Langauges department at Michigan State</a> have been documenting the dialect spoken by people born and raised in the Greater Lansing Area (this includes Ingham, Clinton and Eaton counties).</p>
+                    <p>Our data comes from two sources. Recorded interviews conducted by historians of Autotown in the late 1990's and interviews our researchers conducted with college students in 2014 and 2015.  The Autotown interviewees are managers, clerical workers and auto workers of the autotown plant in Lansing. They were born between 1907 and 1971.  The college students were born between 1990 and 1999 and were attending either Michigan State University or Lansing Community College at the time of their interview.  </p>
+                    <p>Acoustic analysis of these interviews show that the NCS dialect is indeed declining in Lansing.  This is shown in the figure below.  You can see that over time (indicated by birth year along the x-axis), Lansingites are using less and less of the NCS features that are associated with the NCS dialect.  So, for example, there are leess speakers in Lansing that pronounce BEYAT as BAT than there were about 20 years ago and even less than there were 100 years ago. </p>
                    <div id="map" style="width:400px;height:400px;"></div>
 
-<script>
-function myMap() {
-    var mapOptions = {
-        center: new google.maps.LatLng(51.5, -0.12),
-        zoom: 10,
-        mapTypeId: google.maps.MapTypeId.HYBRID
-    }
-var map = new google.maps.Map(document.getElementById("map"), mapOptions);
-}
-</script>
+
                     
                 </div>
             </div>
