--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                                 <img class="img-responsive img-full" src="img/lansingphoto2.png" alt="">
                             </div>
                             <div class="item">
-                                <img class="img-responsive img-full" src="img/lansing_capitol_downtown.jpg" alt="">
+                                <img class="img-responsive img-full" src="img/lansing_StoreFronts.jpg" alt="">
                             </div>
                         </div>
 
