--- a/contacts.html
+++ b/contacts.html
@@ -114,7 +114,8 @@
                 <div class="col-sm-4 text-center">
                     <h3>   Monica Nesbitt
                         <br />
-                        <div><small>How did this new accent spread to Lansing and other cities across the US? Contact Monica at nesbit17[at]msu[dot]edu</small></div>
+                        <div><small>When did speakers in Lansing start shifting away from the NCS?
+                                     What historical and social events are related to this change?</small></div>
                     </h3>
                 </div>
                
